--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "foundation-libsass-template",
+  "name": "foundation-liblite-template",
   "version": "0.0.1",
   "devDependencies": {
+    "bower": "^1.3.9",
     "node-sass": "~0.7.0",
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
