--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "foundation-liblite-template",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/lambdahands/foundation-lite"
+  }
   "version": "0.0.1",
   "devDependencies": {
     "bower": "^1.3.9",
@@ -7,5 +11,9 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-sass": "~0.8.0"
-  }
+  },
+  "dependencies": {
+    "grunt-remove": "^0.1.0"
+  },
+  "license": "MIT"
 }
